@@ -1,5 +1,6 @@
-* FindAndModify not returning error message as other methods
+* FindAndModify not returning error message as other methods Issue #277
 * Added test coverage for $push, $pushAll and $inc atomic operations
+* Correct Error handling for non 12/24 bit ids on Pure JS ObjectID class Issue #276
 
 0.9.6-5 2011-07-06
 * Rewritten BSON js parser now faster than the C parser on my core2duo laptop
